--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="container">
       <article>
-        <h2>Lorem, ipsum.</h2>
+        <h2><a href="#">Lorem, ipsum.</a></h2>
         <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
+        <img class="img-right" src="./images/mountains-1412683__340.webp" alt="" width="270">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
           voluptatum, quam mollitia.</p>
@@ -47,43 +47,16 @@
       <article>
         <h2>Lorem, ipsum.</h2>
         <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
+        <img class="img-left" src="./images/mountains-1412683__340.webp" alt="" width="270">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
           voluptatum, quam mollitia.</p>
       </article>
-
+      <br>
       <article>
         <h2>Lorem, ipsum.</h2>
         <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
-          voluptatum, quam mollitia.</p>
-      </article>
-
-      <article>
-        <h2>Lorem, ipsum.</h2>
-        <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
-          voluptatum, quam mollitia.</p>
-      </article>
-
-      <article>
-        <h2>Lorem, ipsum.</h2>
-        <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
-          voluptatum, quam mollitia.</p>
-      </article>
-
-      <article>
-        <h2>Lorem, ipsum.</h2>
-        <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
+        <img class="img-right" src="./images/mountains-1412683__340.webp" alt="" width="270">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
           voluptatum, quam mollitia.</p>
@@ -91,39 +64,62 @@
       <article>
         <h2>Lorem, ipsum.</h2>
         <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
+        <img class="img-left" src="./images/mountains-1412683__340.webp" alt="" width="270">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
           voluptatum, quam mollitia.</p>
       </article>
-
+      <br>
       <article>
         <h2>Lorem, ipsum.</h2>
         <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
+        <img class="img-right" src="./images/mountains-1412683__340.webp" alt="" width="270">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
           voluptatum, quam mollitia.</p>
       </article>
-
       <article>
         <h2>Lorem, ipsum.</h2>
         <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
+        <img class="img-left" src="./images/mountains-1412683__340.webp" alt="" width="270">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
           voluptatum, quam mollitia.</p>
       </article>
-
+      <br>
       <article>
         <h2>Lorem, ipsum.</h2>
         <aside>22.11.21-Aigerim</aside>
-        <img src="./images/1_MI686k5sDQrISBM6L8pf5A.jpeg" alt="">
+        <img class="img-right" src="./images/mountains-1412683__340.webp" alt="" width="270">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
           voluptatum, quam mollitia.</p>
       </article>
-
+      <article>
+        <h2>Lorem, ipsum.</h2>
+        <aside>22.11.21-Aigerim</aside>
+        <img class="img-left" src="./images/mountains-1412683__340.webp" alt="" width="270">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
+          voluptatum, quam mollitia.</p>
+      </article>
+      <br>
+      <article>
+        <h2>Lorem, ipsum.</h2>
+        <aside>22.11.21-Aigerim</aside>
+        <img class="img-right" src="./images/mountains-1412683__340.webp" alt="" width="270">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
+          voluptatum, quam mollitia.</p>
+      </article>
+      <article>
+        <h2>Lorem, ipsum.</h2>
+        <aside>22.11.21-Aigerim</aside>
+        <img class="img-left" src="./images/mountains-1412683__340.webp" alt="" width="270">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi ipsa nulla vitae officiis modi fuga.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consectetur laboriosam exercitationem
+          voluptatum, quam mollitia.</p>
+      </article>
     </section>
   </main>
 </body>
